[GC] Restore option ZUnmapBadViews
Summary: ZUnmapBadViews has been removed in
  https://github.com/alibaba/dragonwell11/commit/39f759e977 .
  In order to be compatible with Java 11, ZUnmapBadViews must be
  supported. To achieve compatibility, This patch makes ZUnmapBadViews
  indentical with ZVerifyViews.

Reviewed-by: mmyxym, linade

Test Plan: test/hotspot/jtreg/compiler/gcbarriers/UnsafeIntrinsicsTest.java

Issue: https://github.com/alibaba/dragonwell11/pull/240